-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
None
-
162010441f876788428aaacf9a00312d3175d150 (qtbase)
The qch files don't have the proper links to the C++ and QML types pages because in the .qhp file, the ToC is incomplete.
In 5.3: (http://doc-snapshot.qt-project.org/qt5-5.3/qtpositioning.qhp)
<section ref="qtpositioning-index.html" title="Qt Positioning">
<section ref="qtpositioning-module.html" title="C++ Classes">
<section ref="qgeoaddress.html" title="QGeoAddress Class Reference">
In 5.4: (http://doc-snapshot.qt-project.org/qt5-dev/qtpositioning.qhp)
<section ref="qtpositioning-index.html" title="Qt Positioning">
<section ref="" title="C++ Classes">
<section ref="qgeoaddress.html" title="QGeoAddress Class Reference">
See the section about "C++ Classes", the ref attribute is missing. The same is observed for the QML types page.
- is required for
-
QTBUG-40300 Qt 5.4 Documentation Issues (meta bug)
-
- Closed
-